# IoT-Lab

./: .gitignore  .gitmodules  README.md
ble_mqtt_client/: index.js  package.json  uuidParse.js
dashboard_demo/: browserMqtt.js  index.html  mqtt.html  scripts.js  style.css  vanillatoasts.css  vanillatoasts.js
databases/: DublinCore_CO2Levels_Metadata.json  IMicrobit.json  InfluxDump.py  MariaDbQuery.sql  RMicrobit.sql  line.sh
low_level/: baf.sh
low_level/ble_accel/: CMakeLists.txt  app.overlay  prj.conf
low_level/ble_accel/src/: main.c
low_level/ble_co2/: CMakeLists.txt  app.overlay  prj.conf
low_level/ble_co2/src/: .main.c.kate-swp  buttons.c  buttons.h  main.c  scd30_old.c  scd30_old.h  scd_git_version.c  user_config.inc
low_level/buttons_with_matrix_with_interrupts/src/: buttons.c  main.c
low_level/demos/analog_io/: CMakeLists.txt
low_level/demos/analog_io/src/: main.c
low_level/demos/ble_accel/src/: main.c
low_level/demos/ble_minimal/: prj.conf
low_level/demos/ble_minimal/src/: main.c
low_level/demos/ble_stepcount/src/: lsm303_ll.c  main.c
low_level/demos/buttons_with_matrix/src/: main.c
low_level/demos/led_matrix/src/: main.c
low_level/lsm303_microbit_v2_low_level/: CMakeLists.txt
low_level/lsm303_microbit_v2_low_level/src/: lsm303_ll.c  lsm303_ll.h  main.c  matrix.c  speaker.c  speaker.h
